my-apps/home/intercept/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: intercept
  namespace: intercept
spec:
  selector:
    app.kubernetes.io/name: intercept
  ports:
    - name: http
      port: 5050
      targetPort: http
      protocol: TCP
